<resources>
    <string name="app_name">BreakingBad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="saved">SAVED</string>
    <string name="profile">PROFILE</string>
    <string name="characters">Characters</string>
    <string name="error">ERROR</string>
    <string name="details">DETAILS</string>
    <string name="birthday">Birthday</string>
    <string name="status">Status</string>
    <string name="portrayed">Portrayed</string>
    <string name="appearances">APPEARANCES</string>
    <string name="quotes">QUOTES</string>
    <string name="save">SAVE</string>
    <string name="season">SEASON</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="language">Change Language</string>
    <string name="first_login">First Log In</string>

</resources>